Rename old 'core' package and directory to 'system' to match new module name.

--- a/system/build.gradle
+++ b/system/build.gradle
@@ -4,7 +4,7 @@ plugins {
 apply from: "../common.gradle"
 
 android {
-    namespace "de.danoeh.antennapod.core"
+    namespace "de.danoeh.antennapod.system"
 
     lint {
         disable 'VectorPath'
