Improve bug report screen (#8025)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation project(':storage:database-maintenance-service')
     implementation project(':storage:importexport')
     implementation project(':storage:preferences')
+    implementation project(':system')
     implementation project(':ui:app-start-intent')
     implementation project(':ui:common')
     implementation project(':ui:discovery')
