Implements: Choosing a data folder should ask for moving existing data (#149)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation project(':storage:database')
     implementation project(':storage:database-maintenance-service')
     implementation project(':storage:importexport')
+    implementation project(':storage:media-management')
     implementation project(':storage:preferences')
     implementation project(':system')
     implementation project(':ui:app-start-intent')
