--- a/ui/common/build.gradle
+++ b/ui/common/build.gradle
@@ -14,6 +14,7 @@ android {
 dependencies {
     implementation project(":storage:preferences")
     implementation project(":ui:i18n")
+    implementation project(":model")
 
     annotationProcessor "androidx.annotation:annotation:$annotationVersion"
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
