--- a/ui/glide/build.gradle
+++ b/ui/glide/build.gradle
@@ -11,6 +11,7 @@ android {
 dependencies {
     implementation project(":model")
     implementation project(':net:common')
+    implementation project(':ui:common')
 
     implementation "androidx.palette:palette:$paletteVersion"
 
