Fix switching sd card media file path issue (#1777)

--- a/storage/database-maintenance-service/build.gradle
+++ b/storage/database-maintenance-service/build.gradle
@@ -9,6 +9,7 @@ android {
 }
 
 dependencies {
+    implementation project(':model')
     implementation project(':storage:database')
     implementation project(':ui:notifications')
 
